plugins {
    id 'java'
    id 'checkstyle'
    id 'jacoco'
    id 'application'
    id 'gg.jte.gradle' version '3.1.15'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'ru.mentee.power'
version = '1.0-SNAPSHOT'

ext {
    junitVersion = '5.11.0'
    junitPlatformVersion = '1.12.2'
    assertjVersion = '3.27.3'
    lombokVersion = '1.18.40'
    mockitoCoreVersion = '5.20.0'
    mockitoJunitJupiterVersion = '5.20.0'
    servletVersion = '6.1.0'
    tomcatVersion = '11.0.1'
    jteVersion = '3.1.15'
    springBootVersion = '3.5.0'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
    testImplementation "org.assertj:assertj-core:${assertjVersion}"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher:${junitPlatformVersion}"
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testImplementation "org.mockito:mockito-core:${mockitoCoreVersion}"
    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoJunitJupiterVersion}"
    implementation "jakarta.servlet:jakarta.servlet-api:${servletVersion}"
    implementation "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}"
    implementation "gg.jte:jte:${jteVersion}"
    implementation "gg.jte:jte-runtime:${jteVersion}"
    implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
    testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
    implementation "gg.jte:jte-spring-boot-starter-3:${jteVersion}"
}

checkstyle {
    toolVersion = '10.12.4'
    maxErrors = 0
    maxWarnings = 999
    configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
}

tasks.withType(Checkstyle).configureEach {
    group = "verification"
}

jacoco {
    toolVersion = '0.8.14'
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = false
        csv.required = false
        html.required = true
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco/test/html')
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ['**/*Main.class'])
        }))
    }
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            limit {
                minimum = 0.80
            }
            excludes = ['**/*Main.class']
        }
    }
}

check {
    dependsOn jacocoTestCoverageVerification
}

application {
    mainClass = 'ru.mentee.power.crm.Main'
}

bootRun {
    mainClass = 'ru.mentee.power.crm.spring.Application'
}

jte {
    sourceDirectory = file("src/main/jte").toPath()
    contentType = "Html"
    binaryStaticContent = false
}